

public enum VoxelMask
{
	None = 0,
	Placement = 1,
	AttackRange = 2,
	MovementRange = 3,
	AreaOfEffect = 4,
	Selected = 5
}